Updated sass files for sass2

--- a/content/css/_definitions.sass
+++ b/content/css/_definitions.sass
@@ -1,27 +1,27 @@
------ 
------ 
-
 // Variables
-!red = #A4282D 
-!gray = #958C78
-!background = #DBD6CB
-!link_color = #028EFF
-!hover_color = #E0400B
-!tan = #FFD8BF
+$red: #a4282d
+$gray: #958c78
+$background: #dbd6cb
+$link_color: #028eff
+$hover_color: #e0400b
+$tan: #ffd8bf
 
-!std_width = 770px
+$std_width: 770px
 
 // Mixins
 =default_border
-  border = 1px "dashed" !gray 
+  border: 1px dashed $gray
 
 =code_font
   font-family: "Consolas", "Monaco", "Monospace"
   font-size: 14px
 
 =text-font
-  font-family: "ff-dagny-web-pro-1","ff-dagny-web-pro-2","Helvetica Neue","Helvetica",sans-serif
+  font-family: "ff-dagny-web-pro-1", "ff-dagny-web-pro-2", "Helvetica Neue", "Helvetica", sans-serif
   font-size: 16px
 
 =title-font
-  font-family: "presicav-1","presicav-2","Helvetica Neue","Helvetica",sans-serif
+  font-family: "presicav-1", "presicav-2", "Helvetica Neue", "Helvetica", sans-serif
+  
+=quote-font
+  font-family: "Times New Roman", serif
