--- a/content/css/_pygments.sass
+++ b/content/css/_pygments.sass
@@ -1,210 +1,161 @@
------
------
 .hll
-  background-color: #404040 
-
+  background-color: #404040
 
 .c
   color: #999999
-  font-style: italic 
-
+  font-style: italic
 
 .err
   color: #a61717
-  background-color: #e3d2d2 
-
+  background-color: #e3d2d2
 
 .g
-  color: #d0d0d0 
-
+  color: #d0d0d0
 
 .k
   color: #6ab825
-  font-weight: bold 
-
+  font-weight: bold
 
 .l, .n, .o, .x, .p
-  color: #d0d0d0 
-
+  color: #d0d0d0
 
 .cm
   color: #999999
-  font-style: italic 
-
+  font-style: italic
 
 .cp
   color: #cd2828
-  font-weight: bold 
-
+  font-weight: bold
 
 .c1
   color: #999999
-  font-style: italic 
-
+  font-style: italic
 
 .cs
   color: #e50808
   font-weight: bold
-  background-color: #520000 
-
+  background-color: #520000
 
 .gd
-  color: #d22323 
-
+  color: #d22323
 
 .ge
   color: #d0d0d0
-  font-style: italic 
-
+  font-style: italic
 
 .gr
-  color: #d22323 
-
+  color: #d22323
 
 .gh
-  color: #ffffff
-  font-weight: bold 
-
+  color: white
+  font-weight: bold
 
 .gi
-  color: #589819 
-
+  color: #589819
 
 .go
-  color: #cccccc 
-
+  color: #cccccc
 
 .gp
-  color: #aaaaaa 
-
+  color: #aaaaaa
 
 .gs
   color: #d0d0d0
-  font-weight: bold 
-
+  font-weight: bold
 
 .gu
-  color: #ffffff
-  text-decoration: underline 
-
+  color: white
+  text-decoration: underline
 
 .gt
-  color: #d22323 
-
+  color: #d22323
 
 .kc, .kd, .kn
   color: #6ab825
-  font-weight: bold 
-
+  font-weight: bold
 
 .kp
-  color: #6ab825 
-
+  color: #6ab825
 
 .kr, .kt
   color: #6ab825
-  font-weight: bold 
-
+  font-weight: bold
 
 .ld
-  color: #d0d0d0 
-
+  color: #d0d0d0
 
 .m
-  color: #3677a9 
-
+  color: #3677a9
 
 .s
-  color: #ed9d13 
-
+  color: #ed9d13
 
 .na
-  color: #bbbbbb 
-
+  color: #bbbbbb
 
 .nb
-  color: #24909d 
-
+  color: #24909d
 
 .nc
   color: #447fcf
-  text-decoration: underline 
-
+  text-decoration: underline
 
 .no
-  color: #40ffff 
-
+  color: #40ffff
 
 .nd
-  color: #ffa500 
-
+  color: #ffa500
 
 .ni
-  color: #d0d0d0 
-
+  color: #d0d0d0
 
 .ne
-  color: #bbbbbb 
-
+  color: #bbbbbb
 
 .nf
-  color: #447fcf 
-
+  color: #447fcf
 
 .nl
-  color: #d0d0d0 
-
+  color: #d0d0d0
 
 .nn
   color: #447fcf
-  text-decoration: underline 
-
+  text-decoration: underline
 
 .nx, .py
-  color: #d0d0d0 
-
+  color: #d0d0d0
 
 .nt
   color: #6ab825
-  font-weight: bold 
-
+  font-weight: bold
 
 .nv
-  color: #40ffff 
-
+  color: #40ffff
 
 .ow
   color: #6ab825
-  font-weight: bold 
-
+  font-weight: bold
 
 .w
-  color: #666666 
-
+  color: #666666
 
 .mf, .mh, .mi, .mo
-  color: #3677a9 
-
+  color: #3677a9
 
 .sb, .sc, .sd, .s2, .se, .sh, .si
-  color: #ed9d13 
-
+  color: #ed9d13
 
 .sx
-  color: #ffa500 
-
+  color: #ffa500
 
 .sr, .s1, .ss
-  color: #ed9d13 
-
+  color: #ed9d13
 
 .bp
-  color: #24909d 
-
+  color: #24909d
 
 .vc, .vg, .vi
-  color: #40ffff 
-
+  color: #40ffff
 
 .il
   color: #3677a9
