CSS tweaks for headers

--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -216,9 +216,13 @@ h2
 #bookshelf
   width: 250px
   float: left
+  h1, h2, h3, h4, h5, h6
+    clear: none
 
 #twats
   margin: 0 0 0 260px
+  h1, h2, h3, h4, h5, h6
+    clear: none
   h2 img
     float: right
     border: none
