CSS tweaking for footnotes

--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -266,8 +266,16 @@ td
     +title-font
     a
       color: $gray
+      
+  h1
+    font-size: 24px
   h2
     margin-top: 18px
+    font-size: 20px
+  h3
+    font-size: 16px
+  h4
+    font-size: 12px
   #comment_count
     float: right
     color: $gray
@@ -352,3 +360,8 @@ blockquote
 code
   color: #444
   font-weight: bold
+
+#footnotes
+  margin-top: 24px
+  margin-bottom: 18px
+  border-bottom: 1px solid #888
