CSS tweaks for disqus comments

--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -38,14 +38,12 @@ img.right
   margin: 7px 0 7px 7px
   float: right
 
-#wrap
+#wrap, #disqus_thread
   margin: 0 auto
   height: auto !important
   height: 100%
   min-height: 100%
   position: relative
-
-#wrap
   width: $std_width
 
 #shim
