--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -132,21 +132,13 @@ img.right
 #blog
   margin: 50px 0 50px 0
 
-h2
-  color: #171717
-  font-weight: normal
-  background-image: url(/images/border.png)
-  background-repeat: repeat-x
-  background-position: bottom
-  margin: 0 0 20px 0
-  +title-font
-
 #blog
   h2
     font-size: 20px
     font-weight: 300
     letter-spacing: 4px
     text-transform: uppercase
+    background: none
     .right
       float: right
       a
@@ -210,6 +202,13 @@ h2
 #else h2
   font-size: 18px
   font-weight: 300
+  color: #171717
+  font-weight: normal
+  background-image: url(/images/border.png)
+  background-repeat: repeat-x
+  background-position: bottom
+  margin: 0 0 20px 0
+
 
 #bookshelf
   width: 250px
@@ -236,14 +235,6 @@ h2
       display: inline
       &:hover
         color: $hover_color
-
-th
-  width: 120px
-  color: $tan
-  +title-font
-  text-transform: uppercase
-  font-size: 12px
-  font-weight: 400
 
 td
   padding-bottom: 20px
