--- a/server/views/metaweblog_get_recent_posts.haml
+++ b/server/views/metaweblog_get_recent_posts.haml
@@ -5,6 +5,6 @@
       %value
         %array
           %data
-            - BLOG_SITE.articles[0..max_posts].each do |post|
+            - recent_posts.each do |post|
               %value
                 = haml :post, :layout => false, :locals => {:post => post}
