A hack to get around odd Nanoc bugs.
Somehow adding new items seems to invalidate other items. So we'll just cache the content on the fly and only drop down to nanoc when we need to.

--- a/server/views/post.haml
+++ b/server/views/post.haml
@@ -13,7 +13,7 @@
   %member
     %name description
     %value
-      %string&=post.rep_named(:default).compiled_content
+      %string&=ALL_POSTS[post.identifier]
   %member
     %name title
     %value
