Removed moochbot from projects page, replaced with RC

--- a/content/css/_theme.sass
+++ b/content/css/_theme.sass
@@ -87,12 +87,12 @@ img.right
 
 #feature ul
   margin-top: 20px
+  #radiantcapsule
+    background: url(/images/radiantcapsule.png) no-repeat top
   #github
     background: url(/images/github.png) no-repeat top
   #peepcode
     background: url(/images/peepcode.png) no-repeat top
-  #moochbot
-    background: url(/images/moochbot.png) no-repeat top
     p
       margin-top: 20px
   li.project
